--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   }
 
 </style>
-
+	
+<link rel='icon' href='favicon.png' type='image/x-icon'/ >
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 
