--- a/index.html
+++ b/index.html
@@ -4,53 +4,60 @@
   <title>Daisy Horne</title>
 
 <style>
-  body {
-    background-color: #fd9f88;
-  }
 
-  p {
-    font-family: 'Abril Fatface', cursive;
-    font-size: 50px;
-    color: #fff;
-    text-align: center;
-    letter-spacing: 1px;
-  }
 
-  .center {
-    height: 100vh;
-    position: relative;
-  }
 
-  .center p {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+body {
+  background-color: #fd9f88;
+}
 
+p {
+  font-family: 'Abril Fatface', cursive;
+  font-size: 50px;
+  color: #fff;
+  text-align: center;
+  letter-spacing: 1px;
+}
+
+.center {
+  height: 100vh;
+  position: relative;
+}
+
+.center p {
+  width: 1000px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+}
+
+}
 </style>
-	
-<link rel='icon' href='favicon.png' type='image/x-icon'/ >
+
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <div class="center">
 
-<p>Daisy is
+<p>
 
-<script>
+  <script type="text/javascript">
 
-  function days_old(dt) {
-    var current = new Date(dt.getTime());
-    var previous = new Date(dt.getFullYear(), 0, 1);
+  //Set the two dates
+  var birthdate =new Date(2019, 4, 28) //Month is 0-11 in JavaScript
+  today=new Date()
+  //Get 1 day in milliseconds
+  var one_day=1000*60*60*24
 
-    return Math.ceil((current - previous + 1) / 86400000);
-  }
-  document.write(days_old(new Date(2019, 5, 28)));
+  //Calculate difference btw the two dates, and convert to days
+  document.write("Daisy is "+Math.ceil((today.getTime()-birthdate.getTime())/(one_day))+
+  " days old.")
 
-</script> days old.
+  </script>
 
 </p>
 </div>
