--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-}
 
-}
+  @media (max-width: 600px) {
+  .center {
+    height: 80vh;
+  }
+
+  .center p {
+    width: 300px;
+  }
+
+
 </style>
 
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
